# 7drl-2026

./: CMakeLists.txt  README.md
src/: main.cpp
src/level/: Level.cpp  Level.hpp  Tile.cpp  Tile.hpp  TileType.hpp  Vec2i.cpp  Vec2i.hpp  Wall.cpp  Wall.hpp  WallDirection.hpp  level_generator.cpp  level_generator.hpp  tile_constants.cpp  tile_constants.hpp
src/level/bsp/: Area.cpp  Area.hpp  BSP.cpp  BSP.hpp  CellNode.cpp  CellNode.hpp  helpers.cpp  helpers.hpp
src/resources/raw/: floor.aseprite  tileset.aseprite  wall.aseprite
